--- a/app/src/main/res/layout/activity_invite_friend.xml
+++ b/app/src/main/res/layout/activity_invite_friend.xml
@@ -30,7 +30,7 @@
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/Referpeople"
+        android:id="@+id/referpeople"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
