--- a/app/src/main/res/layout/forth_exercise_main.xml
+++ b/app/src/main/res/layout/forth_exercise_main.xml
@@ -73,7 +73,7 @@
         android:id="@+id/BtnOneM"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@drawable/background_shape"
         android:text="Occasional exercise"
         android:textColor="@color/black"
         android:layout_marginTop="44dp"
@@ -86,7 +86,7 @@
         android:id="@+id/BtnTwoM"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@drawable/background_shape"
         android:text="Enough cardio to keep up"
         android:padding="12dp"
         android:textColor="@color/black"
@@ -98,7 +98,7 @@
         android:id="@+id/BtnThreeM"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@drawable/background_shape"
         android:padding="12dp"
         android:text="All exercise all the time"
         android:textColor="@color/black"
