--- a/app/src/main/res/layout/height_main.xml
+++ b/app/src/main/res/layout/height_main.xml
@@ -92,8 +92,8 @@
         android:id="@+id/BtnThreeHt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#2193b0"
         android:padding="12dp"
+        android:background="@drawable/btncolor"
         android:layout_marginTop="144dp"
         android:text="Confirm"
         android:textSize="18dp"
