--- a/app/src/main/res/layout/nightlife_main.xml
+++ b/app/src/main/res/layout/nightlife_main.xml
@@ -75,11 +75,11 @@
         android:id="@+id/BtnOne"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
         android:text="i'm in bed by midnight"
         android:textColor="@color/black"
         android:layout_marginTop="44dp"
         android:padding="12dp"
+        android:background="@drawable/background_shape"
         android:layout_marginRight="40dp"
         android:layout_marginLeft="40dp"/>
 
@@ -88,7 +88,7 @@
         android:id="@+id/BtnTwo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@drawable/background_shape"
         android:text="I party in moderation"
         android:padding="12dp"
         android:textColor="@color/black"
@@ -100,7 +100,7 @@
         android:id="@+id/BtnThree"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@drawable/background_shape"
         android:padding="12dp"
         android:text="I'm a night owl"
         android:textColor="@color/black"
