--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,13 +18,13 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="20dp"
         android:paddingTop="@dimen/dp_25"
         android:layout_weight="2"
         android:text=" Find The \n People \n You've \n Crossed \n Paths with"
         android:textAlignment="textStart"
         android:textColor="@color/white"
-        android:textSize="60dp"
+        android:textSize="60sp"
         android:textStyle="bold" />
 
     <FrameLayout
@@ -78,7 +78,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_weight="5">
-
 
     </FrameLayout>
 
