--- a/app/src/main/res/layout/activity_male_female_check.xml
+++ b/app/src/main/res/layout/activity_male_female_check.xml
@@ -8,6 +8,75 @@
     tools:context=".Quiz.MaleFemaleCheck">
 
     <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/cantora_one"
+        android:gravity="center"
+        android:text="You are..."
+        android:textColor="@color/black"
+        android:textSize="30sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_50"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            app:cardCornerRadius="10dp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/male" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="80dp"
+                android:fontFamily="@font/cantora_one"
+                android:gravity="center"
+                android:text="@string/Male"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
+
+        </androidx.cardview.widget.CardView>
+
+        <Space
+            android:layout_width="50dp"
+            android:layout_height="wrap_content" />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            app:cardCornerRadius="10dp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/female" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="80dp"
+                android:fontFamily="@font/cantora_one"
+                android:gravity="center"
+                android:text="@string/Female"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
+
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
+
+    <TextView
         android:id="@+id/TextPath"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,88 +87,45 @@
         android:textColor="@color/black"
         android:textSize="30sp" />
 
-    <LinearLayout
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/swMale"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
-        android:orientation="horizontal"
-        android:weightSum="2">
+        android:checked="false"
+        android:fontFamily="@font/cantora_one"
+        android:text="Male"
+        android:textSize="20sp"
+        android:thumb="@drawable/thumb"
+        app:switchPadding="15dp"
+        app:thumbTint="@color/black"
+        app:track="@drawable/track" />
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/swFemale"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="30dp"
+        android:checked="false"
+        android:fontFamily="@font/cantora_one"
+        android:text="Female"
+        android:textSize="20sp"
+        android:thumb="@drawable/thumb"
+        app:switchPadding="15dp"
+        app:thumbTint="@color/black"
+        app:track="@drawable/track" />
 
-            <Button
-                android:id="@+id/BtnMaleSvg"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_marginStart="@dimen/dp_40"
-                android:background="@drawable/ic_male"
-                android:text="Male" />
-
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/swMale"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/BtnMaleSvg"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="30dp"
-                android:checked="false"
-                android:fontFamily="@font/cantora_one"
-                android:text="Male"
-                android:textSize="20sp"
-                android:thumb="@drawable/thumb"
-                app:switchPadding="15dp"
-                app:thumbTint="@color/black"
-                app:track="@drawable/track" />
-
-        </RelativeLayout>
-
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
-
-            <Button
-                android:id="@+id/btnFemale"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_marginStart="@dimen/dp_40"
-                android:background="@drawable/ic_female"
-                android:text="Female" />
-
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/swFemale"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/btnFemale"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="10dp"
-                android:checked="false"
-                android:fontFamily="@font/cantora_one"
-                android:text="Female"
-                android:textSize="20sp"
-                android:thumb="@drawable/thumb"
-                app:switchPadding="15dp"
-                app:thumbTint="@color/black"
-                app:track="@drawable/track" />
-
-        </RelativeLayout>
-
-    </LinearLayout>
 
     <TextView
         android:id="@+id/discription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="20dp"
         android:text="By clicking CONTINUE ,you expressly give your consent to the  processing of this data, So we can present you with profiles matching your prefenence."
         android:textColor="@color/black" />
@@ -109,13 +135,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dp_50"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="50dp"
-        android:layout_marginTop="50dp"
-        android:gravity="center"
         android:background="@drawable/btncolor"
         android:fontFamily="@font/cantora_one"
+        android:gravity="center"
         android:text="Continue"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="18sp" />
 
 </LinearLayout>
