--- a/app/src/main/res/layout/coding_main.xml
+++ b/app/src/main/res/layout/coding_main.xml
@@ -73,7 +73,7 @@
         android:id="@+id/BtnOne11"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@drawable/background_shape"
         android:text="From all of my heart"
         android:textColor="@color/black"
         android:layout_marginTop="44dp"
@@ -86,7 +86,7 @@
         android:id="@+id/BtnTwo11"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@drawable/background_shape"
         android:text="sometimes for assignment only"
         android:padding="12dp"
         android:textColor="@color/black"
@@ -98,7 +98,7 @@
         android:id="@+id/BtnThree11"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@drawable/background_shape"
         android:padding="12dp"
         android:text="i'm a pro bro...:)"
         android:textColor="@color/black"
