--- a/app/src/main/res/layout/vacation_main.xml
+++ b/app/src/main/res/layout/vacation_main.xml
@@ -73,7 +73,7 @@
         android:id="@+id/BtnOneCB"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@drawable/background_shape"
         android:text="Hiking &amp; backpack"
         android:textColor="@color/black"
         android:layout_marginTop="44dp"
@@ -86,7 +86,7 @@
         android:id="@+id/BtnTwoCB"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@drawable/background_shape"
         android:text="Deckchair &amp; suncreen"
         android:padding="12dp"
         android:textColor="@color/black"
@@ -98,7 +98,7 @@
         android:id="@+id/BtnThreeCB"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@drawable/background_shape"
         android:padding="12dp"
         android:text="museum_postcards"
         android:textColor="@color/black"
