--- a/app/src/main/res/layout/win_layout.xml
+++ b/app/src/main/res/layout/win_layout.xml
@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="350dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        app:cardCornerRadius="20dp"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:backgroundTint="#FF45CC7B"
+        app:cardCornerRadius="20dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/darker_gray">
+            android:background="#FF45CC7B">
 
             <TextView
                 android:id="@+id/youwon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="25dp"
-                android:textStyle="bold"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"
-                android:text="You Won!" />
+                android:text="You Won!"
+                android:textSize="25sp"
+                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/cup"
-                android:layout_width="120dp"
+                android:layout_width="match_parent"
                 android:layout_height="180dp"
                 android:layout_below="@id/youwon"
                 android:layout_centerHorizontal="true"
@@ -39,20 +39,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/cup"
+                android:layout_marginTop="1dp"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
-
-                android:text="Congragulations you won the reward.! keep searching for the crushes" />
+                android:text="Congragulations you won the reward.! keep searching for the crushes"
+                android:textAlignment="center" />
 
             <Button
+                android:id="@+id/okbutton"
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/sentence"
                 android:layout_centerHorizontal="true"
-                android:id="@+id/okbutton"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
-                android:background="@drawable/ic_rectangle_8"
+                android:background="@drawable/btncolor"
                 android:text="ok" />
 
         </RelativeLayout>
