--- a/app/src/main/res/layout/activity_quiz_intro.xml
+++ b/app/src/main/res/layout/activity_quiz_intro.xml
@@ -7,46 +7,30 @@
     android:layout_height="match_parent"
     tools:context=".Quiz.QuizIntro">
 
-
     <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/love"
-        android:layout_width="wrap_content"
-        android:layout_height="120dp"
-
-        android:layout_marginRight="@dimen/dp_10"
-        android:layout_marginTop="10dp"
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:lottie_rawRes="@raw/thinkdate"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
-        app:lottie_rawRes="@raw/loveandkiss" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.447" />
 
-    <ImageView
-        android:id="@+id/cakeEmoji"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="90dp"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="74dp"
-        android:outlineAmbientShadowColor="#FFA500"
-        android:outlineSpotShadowColor="#FFA500"
-        android:rotationX="1"
-        android:rotationY="33"
-        android:src="@drawable/ca"
-        android:layout_alignParentRight="true" />
-
-    <ImageView
-        android:id="@+id/IvuserImage"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:src="@drawable/subh"
-        android:layout_marginTop="30dp"
-        android:layout_below="@id/cakeEmoji"/>
 
     <TextView
         android:id="@+id/TvUserGreetingText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Now, let's perfect that profile of yours!"
-        android:layout_below="@+id/IvuserImage"
+        android:layout_below="@+id/imageView"
         android:textSize="33dp"
         android:textColor="@color/black"
         android:layout_margin="20dp"
@@ -54,31 +38,13 @@
         android:textAlignment="center"
         android:gravity="center_horizontal" />
 
-    <ImageView
-        android:id="@+id/IvBasketBall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ballll"
-        android:rotationY="12"
-        android:rotationX="34"
-        android:layout_below="@id/TvUserGreetingText"/>
-
-    <ImageView
-        android:id="@+id/partypol"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/parrrty"
-        android:layout_below="@+id/IvBasketBall"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true" />
-
 
     <Button
         android:id="@+id/BtnLetsGO"
-        android:layout_width="200dp"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/TvUserGreetingText"
-        android:text="Lets Go!"
+        android:text="Let's Go!"
         android:textColor="@color/black"
         android:background="@drawable/ic_rectangle_8"
         android:textSize="23dp"
