--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -11,18 +11,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageSwitcher
-            android:layout_width="wrap_content"
-            android:id="@+id/imageswitcher"
-            android:layout_height="wrap_content" />
+       <ViewFlipper
+           android:layout_width="match_parent"
+           android:autoStart="true"
+           android:flipInterval="2000"
+           android:inAnimation="@android:anim/slide_in_left"
+           android:outAnimation="@android:anim/slide_out_right"
+           android:id="@+id/slider"
+           android:layout_height="wrap_content" >
 
-        <ImageView
-            android:id="@+id/ivimage3"
-            android:layout_width="match_parent"
-            android:layout_height="430dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:scaleType="fitXY" />
 
         <ImageView
             android:id="@+id/ivimage"
@@ -40,11 +37,14 @@
             android:layout_alignParentTop="true"
             android:scaleType="fitXY" />
 
+       </ViewFlipper>
+
+
         <Button
             android:id="@+id/btndetails"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_below="@+id/ivimage"
+            android:layout_below="@+id/slider"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="-15dp"
             android:layout_marginEnd="22dp"
@@ -59,7 +59,7 @@
             android:id="@+id/view1"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_below="@id/ivimage"
+            android:layout_below="@id/slider"
             android:layout_alignParentStart="true"
             android:layout_marginStart="-2dp"
             android:layout_marginTop="-20dp"
@@ -70,7 +70,7 @@
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/ivimage"
+            android:layout_below="@id/slider"
             android:layout_marginStart="25dp"
             android:layout_marginTop="-10dp"
             android:text="Priyanka Chopra"
@@ -82,7 +82,7 @@
             android:id="@+id/tvAge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/ivimage"
+            android:layout_below="@id/slider"
             android:layout_marginStart="5dp"
             android:layout_marginTop="-8dp"
             android:textColor="@color/black"
