--- a/app/src/main/res/layout/activity_app_settings.xml
+++ b/app/src/main/res/layout/activity_app_settings.xml
@@ -231,6 +231,7 @@
             android:textSize="18sp" />
 
         <TextView
+            android:id="@+id/privacyPolicy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -250,6 +251,7 @@
             android:textSize="18sp" />
 
         <TextView
+            android:id="@+id/MyData"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
