--- a/app/src/main/res/layout/activity_f_b_privacy_policy.xml
+++ b/app/src/main/res/layout/activity_f_b_privacy_policy.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".FBPrivacyPolicy">
+    tools:context=".LoginDetail.FBPrivacyPolicy">
 
     <LinearLayout
         android:id="@+id/lyView"
